@@ -1020,6 +1020,32 @@ Returns the IDs of up to 100 users who retweeted the status identified by C<id>.
 
 );
 
+twitter_api_method friendships_incoming => (
+    path => 'friendships/incoming',
+    method => 'GET',
+    params => [qw/cursor/],
+    required => [qw/cursor/],
+    returns  => 'HashRef',
+    description => <<'',
+Returns an HASH ref with an array of numeric IDs in the C<ids> element for
+every user who has a pending request to follow the authenticating user.
+
+);
+
+twitter_api_method friendships_outgoing => (
+    path => 'friendships/outgoing',
+    method => 'GET',
+    params => [qw/cursor/],
+    required => [qw/cursor/],
+    returns  => 'HashRef',
+    description => <<'',
+Returns an HASH ref with an array of numeric IDs in the C<ids> element for
+every protected user for whom the authenticating user has a pending follow
+request.
+
+);
+
+
 around lookup_users => sub {
     my $orig = shift;
     my $self = shift;
