@@ -1,3 +1,5 @@
+    - added friends_incoming and friendships_outgoing methods
+
 3.12000 2010-03-19
     - added new API methods: retweeted_by and retweeted_by_ids
     - fixed: t/51_since.t was actually connecting to twitter
